# track_my_subs

./: .env.example  .gitignore  CLAUDE.md  README.md  contributor_guideline.md
.claude/: progress.md  settings.json  (+1 more)
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_renewal_trial_alerts.py  0003_imap_credentials.py
backend/app/: main.py
backend/app/agent/: loop.py  prompts.py  tools.py
backend/app/api/: accounts.py  auth.py  dashboard.py  deps.py  notifications.py  scans.py
backend/app/core/: config.py  db.py  security.py
backend/app/integrations/: anthropic_client.py  email_common.py  email_imap.py  gmail.py  ses_client.py
backend/app/models/: __init__.py  email_account.py  notification.py  notification_preference.py  payment.py  scan_run.py  subscription.py  types.py  user.py
backend/app/schemas/: auth.py  dashboard.py  notifications.py
backend/app/services/: alerts.py  dashboard.py  notifications.py
backend/app/worker/: alerts.py
backend/tests/: conftest.py  test_accounts_imap.py  test_accounts_oauth.py  test_agent_loop.py  test_agent_tools.py  test_alerts.py  test_auth.py  test_dashboard.py  test_gmail.py  test_imap.py  test_notifications_api.py  test_notifications_worker.py  test_scans.py  test_ses_client.py  test_tenant_isolation.py
infra/: README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
infra/stacks/: backend_stack.py  cicd_stack.py  data_stack.py  ecr_stack.py  frontend_stack.py  network_stack.py
(+57 files in other folders)
